--- a/src/components/Filter/styles.module.css
+++ b/src/components/Filter/styles.module.css
@@ -15,83 +15,71 @@
 }
 
 .menu__list {
-  width: 240px;
+  width: 100%;
   flex: 1 1 auto;
   padding: 0;
   list-style: none;
   margin: 0;
   display: flex;
-  flex-direction: column;
-  row-gap: 24px;
+  column-gap: 8px;
 }
 
 .menu__groupName {
-  font-size: 14px;
+  font-size: 12px;
   font-style: normal;
   font-weight: 600;
-  line-height: 24px;
+  line-height: 16px;
   margin: 0;
-  padding: 0;
+  padding: 12px 35px 12px 16px;
+  border-radius: 12px;
+  background-color: var(--Main-White);
 }
 
 .menu__group {
   position: relative;
 }
 
-.menu__group::after {
-  content: '';
-  width: 240px;
-  height: 1px;
-  background-color: #42434b1f;
-  display: block;
-  position: absolute;
-  bottom: 0px;
-}
-
 .menu__groupList {
+  position: absolute;
   list-style: none;
   padding: 0;
   opacity: 0;
   transition: all 0.3s ease;
-  border-top: 1px solid #42434b1f;
-  padding-top: 12px;
-  height: 0px;
+  padding-top: 4px;
+  background-color: var(--Main-White);
+  width: 100%;
+  border-radius: 12px;
 }
 
 .menu__groupList_active {
   opacity: 1;
-  height: 204px;
   transition: all 0.3s ease;
   row-gap: 4px;
-  margin-top: 12px;
 }
 .menu__item {
-  font-size: 14px;
+  font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 20px;
-  opacity: 0.64;
-  padding: 14px 8px 14px 32px;
+  line-height: 150%;
+  color: #000000d9;
+  padding: 5px 12px;
 }
 
 .menu__item_active {
-  opacity: 1;
-  color: var(--Main-White);
-  background-color: var(--Main-Dark-Gray);
-  border-radius: 12px;
+  background-color: #EAEAEA;
 }
 
 .menu__arrowButton {
   background-color: transparent;
   border: none;
-  width: 24px;
-  height: 24px;
+  width: 13px;
+  height: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
-  top: 0px;
-  right: 8px;
+  top: 12px;
+  right: 16px;
   padding: 0;
 }
 
